--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div style="height: 100vh;" class="d-flex justify-content-center align-items-center">
     <div style="height: auto; border-radius: 40px;" class="dark-card fade-in col-md-4 col-sm-10">
       <div class="row m-3 d-flex justify-content-center align-items-center">
-        <h1 class="text-center w-txt">Welcome</h1>
+        <h1 class="text-center w-txt">MinkerPage</h1>
         <p class="text-center mb-3" style="font-size:14px; color:#ccc;">A simple personal homepage offering access to birthdays, a study calendar, and other handy pages.</p>
         <button style="color: white; font-weight: bold;" class="btn btn-warning col-6 pt-5 pb-5 mt-3 mb-3" id="bootBtn">
           <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-power"
